--- a/src/MerchantFrontend/src/app/core/layouts/landing-page-layout/landing-page-layout.component.html
+++ b/src/MerchantFrontend/src/app/core/layouts/landing-page-layout/landing-page-layout.component.html
@@ -2,7 +2,7 @@
   <clr-header class="header portal-header">
     <div class="branding">
       <a routerLink="/" >
-        <img class="logo" src="assets/images/downtown.svg">
+        <img class="logo" src="assets/images/zehlendorf-haendlerportal.svg">
         <span class="title">Portal</span>
       </a>
     </div>
