--- a/src/Portal/Resources/views/storefront/layout/footer/footer.html.twig
+++ b/src/Portal/Resources/views/storefront/layout/footer/footer.html.twig
@@ -1,3 +1,13 @@
 {% sw_extends "storefront/layout/footer/footer.html.twig" %}
 
-{% block layout_footer_navigation %}{% endblock %}
+{% block layout_footer_navigation %}
+
+<div class="cms-element-text" style="width:100%; margin-top: 1em; ">
+    <p style="margin: 0 auto; ">
+    	<a class="" href="https://marktplatz.zehlendorf.com/impressum/"target="_self">Impressum</a> |
+    	<a class="" href="https://marktplatz.zehlendorf.com/datenschutz/" target="_self">Datenschutz</a> |
+    	<a class="" href="https://marktplatz.zehlendorf.com/agb/" target="_self">Allgemeine Geschäftsbedingungen</a>
+    </p>
+</div>
+
+{% endblock %}
